--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,33 @@ html,body{
     height: 300vh;
 }
 
+h1{
+    font-family: "Poppins", sans-serif;
+    font-size: 13rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+    line-height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    font-family: "Poppins", sans-serif;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    line-height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+p{
+    font-family: "Poppins", sans-serif;
+    font-size: 1.4rem;
+    color: white;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -93,4 +120,28 @@ header button{
     right: 0;
     margin: 0 auto;
     bottom: 2vh;
+}
+
+.heroContainer{
+    display: flex;
+    justify-content: space-between;
+    padding: 5vh 10%;
+}
+
+.heroLeft{
+    width: 35%;
+    display: inline-block;
+}
+
+.heroLeft p{
+    width: 90%;
+}
+
+.leftSide{
+    text-align: right;
+}
+
+.heroRight{
+    width: 40%;
+    display: inline-block;
 }
