modified hero section

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1{
 
 h2{
     font-family: "Poppins", sans-serif;
-    font-size: 2rem;
+    font-size: 3.5rem;
     text-transform: uppercase;
     color: white;
     line-height: 100%;
@@ -132,6 +132,10 @@ header button{
     width: 35%;
     display: inline-block;
 }
+.heroLeft img{
+    height: 35vh;
+    margin-bottom: 5vh;
+}
 
 .heroLeft p{
     width: 90%;
@@ -144,4 +148,21 @@ header button{
 .heroRight{
     width: 40%;
     display: inline-block;
+}
+
+.end{
+    display: inline-block;
+    position: relative;
+    right: -10%;
+}
+
+
+.heroRight img{
+    display: inline-block;
+    position: relative;
+    top: -5vh;
+}
+
+.heroLeft p, .heroRight p{
+    padding-top: 2vh;
 }
