--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,7 @@ header button{
 
 .work h2{
     padding: 8vh 10%;
+    font-style: italic;
 }
 
 .workContainer{
@@ -228,6 +229,7 @@ header button{
 
 .about h2{
     padding: 8vh 10%;
+    font-style: italic;
 }
 
 .about h3{
