--- a/styles.css
+++ b/styles.css
@@ -234,9 +234,10 @@ header button{
 
 .about h3{
     text-align: center;
+    margin-top: 8vh;
 }
 
-.about p{
+.about .aboutText{
     text-align: center;
     font-size: 2.5rem;
     width: 80%;
@@ -246,4 +247,18 @@ header button{
 .about img{
     display: block;
     margin: 0 auto;
+}
+
+.skillContainer{
+    display: flex;
+    margin: 0 10%;
+    justify-content: space-between;
+}
+
+.skillWebdev, .skillWebdesign{
+    width: 30%;
+}
+
+.skillContainer p{
+    text-align: center;
 }
