page links interactivity

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ header ul li{
  header ul a{
     text-decoration: none;
  }
+ header ul a:hover{
+    color: aqua;
+    transition: 1s;
+ }
 
 .hireButton{
     width: 20%;
